--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "flexbox-react": "^4.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-webcam": "^6.0.1",
     "styled-components": "^5.3.3",
